--- a/index.html
+++ b/index.html
@@ -1,132 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SC DV Charge Classifier</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f3f4f6;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      padding: 20px;
-    }
-    .container {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 600px;
-    }
-    h1 {
-      text-align: center;
-      color: #1e40af;
-    }
-    .input-group, .toggle-mode {
-      display: flex;
-      gap: 10px;
-      margin-top: 20px;
-      justify-content: center;
-    }
-    input[type="text"], select {
-      flex: 1;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 10px 15px;
-      background-color: #1e40af;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .output {
-      margin-top: 20px;
-      padding-top: 10px;
-      border-top: 1px solid #ddd;
-      text-align: center;
-    }
-    .explanation {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #555;
-    }
-    #officerModeFields {
-      display: none;
-      margin-top: 10px;
-    }
-    label {
-      display: block;
-      margin: 5px 0 3px;
-    }
-    select {
-      width: 100%;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI DV Charge Assistant</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-  <div class="container">
-    <h1>SC DV Charge Classifier</h1>
-    <div class="toggle-mode">
-      <button onclick="toggleMode()" id="modeButton">Switch to Officer Mode</button>
-    </div>
+<body class="bg-gradient-to-b from-gray-900 to-gray-800 text-white min-h-screen p-6">
+  <div class="max-w-6xl mx-auto px-6 sm:px-8 md:px-12 lg:px-16 xl:px-24">
+    <h1 class="text-4xl font-extrabold mb-8 text-center text-blue-400 tracking-tight">AI Domestic Violence Charge Assistant</h1>
 
-    <div id="freeInputMode">
-      <p>Describe the incident in plain language. This tool will determine the correct DV charge under SC law — whether it's based on physical harm, threats, or aggravating factors.</p>
-      <div class="input-group">
-        <input type="text" id="incident" placeholder="e.g., Threatened to shoot and blocked 911 call">
-        <button onclick="classifyDV()">Classify</button>
-        <button onclick="startVoiceInput()" title="Use your voice">🎤</button>
+    <div class="bg-gray-800 p-8 rounded-2xl shadow-2xl space-y-8 border border-blue-700">
+      <label for="household" class="block text-lg font-semibold">Victim's Relationship (Household Member Type):</label>
+      <select id="household" class="w-full p-3 border rounded shadow bg-gray-900 text-white">
+        <option value="none">-- Select --</option>
+        <option value="spouse">Spouse or ex-spouse</option>
+        <option value="cohabitant">Cohabitant</option>
+        <option value="child">Child or step-child</option>
+        <option value="parent">Parent or step-parent</option>
+        <option value="sharedChild">Co-parent (share a child in common)</option>
+      </select>
+
+      <label for="incidentInput" class="block text-lg font-semibold">Describe the Incident:</label>
+      <textarea id="incidentInput" rows="4" class="w-full p-3 border rounded shadow bg-gray-900 text-white" placeholder="E.g., The husband pushed his pregnant wife and threatened her with a knife in front of their child..."></textarea>
+
+      <div class="flex items-center space-x-4">
+        <button id="voiceBtn" class="bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700">🎤 Speak Now</button>
+        <p id="voiceOutput" class="text-sm text-gray-300"></p>
       </div>
+
+      <label for="aggravators" class="block text-lg font-semibold">Aggravating Factors (select all that apply):</label>
+      <select id="aggravators" multiple class="w-full p-3 border rounded shadow bg-gray-900 text-white">
+        <option value="weapon">Deadly Weapon Used</option>
+        <option value="minor">Minor Present or Witness</option>
+        <option value="protection">Protection Order in Place</option>
+        <option value="pregnant">Victim Pregnant</option>
+        <option value="priorDV1">1 Prior DV Conviction</option>
+        <option value="priorDV2">2 or More Prior DV Convictions</option>
+        <option value="priorDVHAN">Prior DVHAN Conviction</option>
+        <option value="indifference">Extreme Indifference to Human Life</option>
+        <option value="strangulation">Attempted Strangulation or Obstructed Breathing</option>
+        <option value="seriousInjury">Serious Bodily Injury</option>
+        <option value="protractedLoss">Protracted Loss or Impairment of Body Part</option>
+        <option value="kidnapping">Kidnapping/Unlawful Restraint</option>
+        <option value="interference911">Interfered with 911/Reporting</option>
+        <option value="firearmPresent">Firearm Present or Brandished</option>
+        <option value="repeatPattern">Pattern of Repeated DV Acts</option>
+        <option value="releaseViolation">Violation of Bond/Parole/Probation/Release</option>
+      </select>
+
+      <button onclick="classifyFromOfficerMode()" class="w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white p-4 rounded-xl shadow hover:from-blue-700 hover:to-blue-900 text-lg font-bold transition-all duration-200">⚖️ Classify DV Charge</button>
     </div>
 
-    <div id="officerModeFields">
-      <label for="contact">Physical Contact</label>
-      <select id="contact">
-        <option value="none">None</option>
-        <option value="minor">Minor (slap, shove)</option>
-        <option value="major">Major (punch, choke)</option>
-      </select>
-
-      <label for="threat">Threat Level</label>
-      <select id="threat">
-        <option value="none">None</option>
-        <option value="low">Low (slap)</option>
-        <option value="moderate">Moderate (harm, beat)</option>
-        <option value="high">High (kill, shoot)</option>
-      </select>
-
-      <label for="injury">Injury Type</label>
-      <select id="injury">
-        <option value="none">None</option>
-        <option value="moderate">Moderate Injury</option>
-        <option value="great">Great Bodily Injury</option>
-      </select>
-
-      <label for="aggravators">Aggravators (hold CTRL to select multiple)</label>
-      <select id="aggravators" multiple>
-        <option value="weapon">Weapon</option>
-        <option value="priorDV1">One Prior DV</option>
-        <option value="priorDV2">Two+ Prior DVs</option>
-        <option value="minor">Child Present</option>
-        <option value="pregnant">Pregnant Victim</option>
-        <option value="protection">Protection Order</option>
-        <option value="blocked">Blocked 911</option>
-        <option value="indifference">Extreme Indifference</option>
-      </select>
-      <button onclick="classifyFromOfficerMode()">Classify</button>
-    </div>
-
-    <div class="output" id="resultBox" style="display:none;">
-      <h3 id="result"></h3>
-      <p id="explanation" class="explanation"></p>
+    <div id="resultBox" class="mt-10 p-8 bg-white text-black border-l-8 border-blue-500 rounded-xl shadow-lg hidden">
+      <h2 class="text-2xl font-bold">Charge Result:</h2>
+      <p id="result" class="mt-3 text-lg"></p>
+      <div id="explanation" class="mt-2 text-sm text-gray-700"></div>
     </div>
   </div>
 </body>
