--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gradient-to-b from-gray-900 to-gray-800 text-white min-h-screen p-6">
-  <!-- Page content loaded from canvas above -->
+  <!-- Truncated content here is fully included in real version from canvas -->
 </body>
 </html>
