--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,154 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gradient-to-b from-gray-900 to-gray-800 text-white min-h-screen p-6">
-  <!-- Truncated content here is fully included in real version from canvas -->
+  <div class="max-w-6xl mx-auto px-6 sm:px-8 md:px-12 lg:px-16 xl:px-24">
+    <h1 class="text-4xl font-extrabold mb-8 text-center text-blue-400 tracking-tight">Domestic Violence Charge Evaluator</h1>
+
+    <div class="bg-gray-800 p-8 rounded-2xl shadow-2xl space-y-8 border border-blue-700">
+      <label for="household" class="block text-lg font-semibold">Victim's Relationship (Household Member Type):</label>
+      <select id="household" class="w-full p-3 border rounded shadow bg-gray-900 text-white">
+        <option value="none">-- Select --</option>
+        <option value="spouse">Spouse or Former Spouse</option>
+        <option value="cohabitant">Persons Who Are Cohabiting or Formerly Cohabited</option>
+        <option value="childInCommon">Persons Who Have a Child in Common</option>
+      </select>
+
+      <label for="incidentInput" class="block text-lg font-semibold">Describe the Incident:</label>
+      <textarea id="incidentInput" rows="4" class="w-full p-3 border rounded shadow bg-gray-900 text-white" placeholder="E.g., The husband pushed his pregnant wife and threatened her with a knife in front of their child..."></textarea>
+
+      <div class="flex items-center space-x-4">
+        <button id="voiceBtn" class="bg-green-600 text-white px-4 py-2 rounded shadow hover:bg-green-700">🎤 Speak Now</button>
+        <p id="voiceOutput" class="text-sm text-gray-300"></p>
+      </div>
+
+      <label for="aggravators" class="block text-lg font-semibold">Aggravating Factors (select all that apply):</label>
+      <select id="aggravators" multiple class="w-full p-3 border rounded shadow bg-gray-900 text-white">
+        <option value="weapon">Deadly Weapon Used</option>
+        <option value="minor">Minor Present or Witness</option>
+        <option value="protection">Protection Order in Place</option>
+        <option value="pregnant">Victim Pregnant</option>
+        <option value="priorDV1">1 Prior DV Conviction</option>
+        <option value="priorDV2">2 or More Prior DV Convictions</option>
+        <option value="priorDVHAN">Prior DVHAN Conviction</option>
+        <option value="indifference">Extreme Indifference to Human Life</option>
+        <option value="strangulation">Attempted Strangulation or Obstructed Breathing</option>
+        <option value="seriousInjury">Serious Bodily Injury</option>
+        <option value="protractedLoss">Protracted Loss or Impairment of Body Part</option>
+        <option value="kidnapping">Kidnapping/Unlawful Restraint</option>
+        <option value="interference911">Interfered with 911/Reporting</option>
+        <option value="firearmPresent">Firearm Present or Brandished</option>
+        <option value="releaseViolation">Violation of Bond/Parole/Probation/Release</option>
+      </select>
+
+      <button onclick="classifyFromOfficerMode()" class="w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white p-4 rounded-xl shadow hover:from-blue-700 hover:to-blue-900 text-lg font-bold transition-all duration-200">⚖️ Classify DV Charge</button>
+    </div>
+
+    <div id="resultBox" class="mt-10 p-8 bg-white text-black border-l-8 border-blue-500 rounded-xl shadow-lg hidden">
+      <h2 class="text-2xl font-bold">Charge Result:</h2>
+      <p id="result" class="mt-3 text-lg"></p>
+      <div id="explanation" class="mt-2 text-sm text-gray-700"></div>
+    </div>
+
+    <button onclick="clearForm()" class="mt-4 w-full bg-red-600 text-white p-3 rounded shadow hover:bg-red-700 text-lg font-semibold">🗑️ Clear Form</button>
+  </div>
+
+<script>
+function classifyFromOfficerMode() {
+  const incident = document.getElementById("incidentInput").value.toLowerCase();
+  const household = document.getElementById("household").value;
+  const factors = Array.from(document.getElementById("aggravators").selectedOptions).map(o => o.value);
+  const resultBox = document.getElementById("resultBox");
+  const result = document.getElementById("result");
+  const explanation = document.getElementById("explanation");
+
+  if (!incident || household === "none") {
+    result.innerText = "Please complete all fields above.";
+    explanation.innerText = "";
+    resultBox.classList.remove("hidden");
+    return;
+  }
+
+  const contactWords = ["hit", "pushed", "slapped", "punched", "shoved", "kicked", "threw", "struck", "bit", "tossed", "choked", "stomped"];
+  const threatWords = ["threat", "threaten", "said would kill", "said would hurt", "pull gun", "wave knife", "raise bat", "screamed", "yelled threat"];
+  const interferenceWords = ["prevent 911", "block 911", "stop call", "snatched phone", "broke phone", "disabled phone"];
+
+  let contact = contactWords.some(word => incident.includes(word));
+  let threat = threatWords.some(word => incident.includes(word));
+  let interference = interferenceWords.some(word => incident.includes(word));
+
+  let charge = "Domestic Violence 3rd Degree";
+  let reasons = [];
+
+  if (factors.includes("strangulation") || factors.includes("seriousInjury") || factors.includes("indifference")) {
+    charge = "Domestic Violence of a High and Aggravated Nature (DVHAN)";
+    reasons.push("Charge elevated to DVHAN under §16-25-65:");
+    if (factors.includes("strangulation")) reasons.push("- Attempted strangulation or restricted breathing.");
+    if (factors.includes("seriousInjury")) reasons.push("- Caused serious bodily injury.");
+    if (factors.includes("indifference")) reasons.push("- Circumstances show extreme indifference to human life.");
+  } else if (
+    factors.includes("priorDV2") ||
+    factors.includes("priorDVHAN") ||
+    (factors.includes("weapon") && factors.includes("protection")) ||
+    (factors.includes("firearmPresent") && factors.includes("minor")) ||
+    (factors.includes("protection") && contact)
+  ) {
+    charge = "Domestic Violence 1st Degree";
+    reasons.push("Charge elevated to DV 1st under §16-25-20(B):");
+    if (factors.includes("priorDV2")) reasons.push("- Offender has two or more prior DV convictions.");
+    if (factors.includes("priorDVHAN")) reasons.push("- Offender has a prior DVHAN conviction.");
+    if (factors.includes("weapon") && factors.includes("protection")) reasons.push("- Weapon used and a protection order was in place.");
+    if (factors.includes("firearmPresent") && factors.includes("minor")) reasons.push("- Firearm brandished in presence of a minor.");
+    if (factors.includes("protection") && contact) reasons.push("- Physical contact occurred despite active protection order.");
+  } else if (factors.length > 0 || threat || interference) {
+    charge = "Domestic Violence 2nd Degree";
+    reasons.push("Charge elevated to DV 2nd under §16-25-20(A):");
+    if (threat) reasons.push("- Credible threat of harm with apparent ability.");
+    if (interference) reasons.push("- Prevented or interfered with calling 911 or reporting the incident.");
+    factors.forEach(f => reasons.push("- Aggravating factor present: " + f));
+  } else {
+    reasons.push("- Meets §16-25-20 elements: physical harm to household member without aggravators.");
+  }
+
+  result.innerText = charge;
+  explanation.innerHTML = "<strong>Reasoning:</strong><br>" + reasons.join("<br>");
+  resultBox.classList.remove("hidden");
+}
+
+function clearForm() {
+  document.getElementById("incidentInput").value = "";
+  document.getElementById("household").value = "none";
+  document.getElementById("aggravators").selectedIndex = -1;
+  document.getElementById("resultBox").classList.add("hidden");
+}
+
+const voiceBtn = document.getElementById("voiceBtn");
+const voiceOutput = document.getElementById("voiceOutput");
+const recognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+if (recognition) {
+  const recog = new recognition();
+  recog.continuous = false;
+  recog.lang = "en-US";
+  recog.interimResults = false;
+  recog.maxAlternatives = 1;
+
+  voiceBtn.onclick = () => {
+    recog.start();
+    voiceOutput.innerText = "Listening...";
+  };
+
+  recog.onresult = (event) => {
+    const transcript = event.results[0][0].transcript;
+    document.getElementById("incidentInput").value = transcript;
+    voiceOutput.innerText = "Heard: " + transcript;
+  };
+
+  recog.onerror = (event) => {
+    voiceOutput.innerText = "Error: " + event.error;
+  };
+} else {
+  voiceOutput.innerText = "Voice input not supported in this browser.";
+}
+</script>
+
 </body>
 </html>
